test_suite5/ALAN/test_suite/alan-2022-examples/failing/004580_mutation.alan
source K653 begin leave false or end
